<resources>
    <string name="app_name">Another</string>
    <string name="item_home">主页</string>
    <string name="item_down">离线缓存</string>
    <string name="item_collection">我的收藏</string>
    <string name="item_history">历史记录</string>
    <string name="item_setting">设置</string>
    <string name="mail">935855375@qq.com</string>
    <string name="username">Blank Cloud</string>
    <string name="edit_email">用户名/邮箱</string>
    <string name="edit_password">密码</string>
    <string name="edit_login">登录</string>
    <string name="edit_regist">没有账户？创建一个？</string>
    <string name="Item_already_member">已有账户？登录？</string>
    <string name="create_account">创建账户</string>
    <string name="register_password">密码</string>
    <string name="register_email">邮箱</string>
    <string name="register_username">用户名</string>
    <string name="search">搜索</string>
    <string name="message">消息</string>
    <string name="text_test">这里是很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长的内容</string>
</resources>
